# twitter-app-nnu

./: .brittany.yaml  .dockerignore  .gitignore  .hlint.yaml  ChangeLog.md  Dockerfile  LICENSE  Makefile  Setup.hs  brittany.yaml  buildspec.yml  cabal.project.freeze  compose.yml  flake.nix  hie.yaml  index.html  name-update.cabal
app/: Main.hs  Test.hs  TwitterBot.hs
ci/: custom-image.buildspec.yml  ecr.buildspec.yml
conf/: Gamers.dhall  Nijisanji.dhall  Since2019.dhall  types.dhall
lib/NNU/: Logger.hs  Nijisanji.hs  Prelude.hs  TH.hs  Util.hs
lib/NNU/App/: TwitterBot.hs
lib/NNU/Effect/: Db.hs  Log.hs  Sleep.hs  Twitter.hs
lib/NNU/Effect/Db/: DynamoDbImpl.hs
lib/NNU/Effect/Log/: StdoutLogImpl.hs
lib/NNU/Effect/Sleep/: IO.hs
lib/NNU/Effect/Twitter/: TwitterImpl.hs
lib/NNU/Handler/: Db.hs  Twitter.hs
lib/NNU/Handler/Db/: Impl.hs
lib/NNU/Handler/Twitter/: Impl.hs
nix/: my-package.nix  my-shell.nix
public/: elm.js
scripts/: setup-local-dynamodb.bash
scripts/shema/: dynamodb-nnu-develop.yml
src/dhall/: Gamers.dhall  Nijisanji.dhall  SEEDs.dhall  Since2019.dhall  types.dhall
src/hs/app/: Main.hs
src/hs/lib/: Config.hs  Models.hs  Nijisanji.hs  Server.hs  Util.hs
src/hs/lib/App/: InitializeDB.hs  MakeSnapshot.hs  MitoSchedule.hs  TwitterBot.hs
src/hs/lib/Data/Extensible/: Reexport.hs
src/hs/lib/Web/Twitter/: API.hs
terraform/: ec2.tf  vpc.tf
test/: Doctests.hs  TestUtil.hs
test/NNU/App/: TwitterBotSpec.hs
test/aws/NNU/App/: TwitterBotSpec.hs
test/doctests/: Doctests.hs
test/unit/: Spec.hs
test/unit/NNU/App/: TwitterBotSpec.hs
