cabal-version: 2.4
name:          name-update
version:       0.3.1.2
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Custom

custom-setup
  setup-depends:
    , base
    , Cabal
    , cabal-doctest
    , hspec

common common-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

library
  import:           common-options

  -- cabal-fmt: expand ./lib
  exposed-modules:
    NNU.App.TwitterBot
    NNU.Effect.Db
    NNU.Effect.Db.DynamoDbImpl
    NNU.Effect.Log
    NNU.Effect.Log.StdoutLogImpl
    NNU.Effect.Sleep
    NNU.Effect.Sleep.IO
    NNU.Effect.Twitter
    NNU.Effect.Twitter.TwitterImpl
    NNU.Nijisanji
    NNU.Prelude
    NNU.TH

  build-depends:
    , aeson
    , amazonka
    , amazonka-dynamodb
    , base                >=4.7      && <5
    , bytestring
    , containers
    , dhall               >=1.24.0
    , errors
    , generic-lens
    , microlens-platform
    , polysemy
    , polysemy-plugin
    , read-env-var
    , rio                 >=0.1.16.0
    , rio-orphans
    , safe-exceptions
    , template-haskell
    , text
    , time
    , twitter-conduit     ^>=0.6.0

  other-modules:    Paths_name_update
  hs-source-dirs:   lib
  default-language: Haskell2010
  ghc-options:      -fplugin=Polysemy.Plugin

executable name-update-2434
  import:           common-options
  main-is:          TwitterBot.hs
  other-modules:    Paths_name_update
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:
    , aeson
    , base          >=4.7      && <5
    , name-update
    , polysemy
    , read-env-var
    , rio           >=0.1.16.0

test-suite unit-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit

  -- cabal-fmt: expand test/functional -Spec -Doctests
  other-modules:  NNU.App.TwitterBotSpec
  main-is:        Spec.hs

  -- build-tool-depends: hspec-discover:hspec-discover -any

  if impl(ghc >=8.4)
    ghc-options: -Wno-missing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

  build-depends:
    , aeson
    , base             >=4.7      && <5
    , generic-lens
    , hspec
    , hspec-core
    , microlens-aeson
    , name-update
    , polysemy
    , rio              >=0.1.16.0
    , rio-orphans
    , twitter-conduit  ^>=0.6.0

test-suite doctest
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Doctests.hs
  hs-source-dirs: test/doctests
  ghc-options:    -Wno-missing-import-lists
  build-depends:
    , base     >=4.7      && <5
    , doctest
    , rio      >=0.1.16.0

  if impl(ghc >=8.4)
    ghc-options: -Wno-missing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

test-suite aws-integration-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/aws

  -- cabal-fmt: expand test/aws -Spec
  other-modules:  NNU.App.TwitterBotSpec
  main-is:        Spec.hs

  -- build-tool-depends: hspec-discover:hspec-discover -any

  if impl(ghc >=8.4)
    ghc-options: -Wno-missing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

  build-depends:
    , aeson
    , base             >=4.7      && <5
    , generic-lens
    , hspec
    , hspec-core
    , name-update
    , polysemy
    , rio              >=0.1.16.0
    , rio-orphans
    , twitter-conduit  ^>=0.6.0
